--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ a#top-link {background: url(images/up.png) no-repeat 0 0; height:48px; width:48p
 .news h2, .lien h2, .comment h2 {font-size:1.8em;text-shadow: 1px 1px 2px #aaa;}
 .comment h3 {font-size:1.4em;}
 .chapo {}
-.permalien {text-align: right;}
+.permalien, .tagss {text-align: right;}
 
 header.titre {}
 header.titre a {text-decoration: none;}
