--- a/template/commentaire.html
+++ b/template/commentaire.html
@@ -1,6 +1,6 @@
 <article class="comment" id="{commentaire_ancre}">
 	<header class="titre">
-		<h2><a class="tooltip" href="{commentaire_lien}" title="Aller au contexte du commentaire"><i class="icon-comment-alt"></i>  {commentaire_ancre}</a> - <a href="#form-commentaire" onclick="reply('[b]@[{commentaire_auteur}|#{commentaire_ancre}] :[/b] ');" title="Répondre à l'auteur du commentaire">@Répondre</a> <img src="{commentaire_gravatar_link}?s=24" class="gravatar-icon" alt="gravatar" /> {commentaire_auteur_lien} - <span class="comments_hours"><i class="icon-time"></i> le {commentaire_date} à {commentaire_heure}</span></h2>
+		<h2><span class="comments_hours"><i class="fa fa-calendar-o"></i>  {commentaire_date} à  <i class="fa fa-clock-o"></i>  {commentaire_heure}</span><br><a class="tooltip" href="{commentaire_lien}" title="Aller au contexte du commentaire"><i class="fa fa-comment-o"></i>  {commentaire_ancre}</a> - <a href="#form-commentaire" onclick="reply('[b]@[{commentaire_auteur}|#{commentaire_ancre}] :[/b] ');" title="Répondre à l'auteur du commentaire">@Répondre</a> <img src="{commentaire_gravatar_link}?s=24" class="gravatar-icon" alt="gravatar" /> {commentaire_auteur_lien}</h2>
 	</header>
 	{commentaire_contenu}
 </article>
