--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {}
 #top_text h2 {margin-top: -1em;font-size:1.6em; font-style: italic; text-align: right;text-shadow: 1px 1px 2px #aaa;}
 #top-link{ display:none; position: fixed; bottom: 5px; right: 5px; opacity: 1; cursor: pointer;}
 a#top-link {background: url(images/up.png) no-repeat 0 0; height:48px; width:48px;}
-#tabletmenu {display: none;}
+.navbar {display: none;}
 
 /* SIDEBAR */
 #sidebar {}
@@ -181,22 +181,38 @@ footer a, footer a:visited {  }
 }
 /* All Mobile Sizes (devices and browser) */
 @media only screen and (max-width: 767px) {
-
+	#top_text {margin-top: -2em;}
+	/* Navbar */
+	.navbar {display: block; position: relative;min-height: 40px;}	
+	.navbar ul {
+		min-width: 180px;
+		padding: 5px 0;
+		position: absolute;
+		top: 0;
+		left: 0;
+		border: solid 1px #ccc;
+		background: #fff url(images/icon-menu.png) no-repeat 10px 11px;
+		border-radius: 5px;
+	}
+	.navbar li {display: none;margin: 0;}
+	.navbar .current {display: block;}
+	.navbar a {display: block;padding: 5px 15px 5px 32px;text-align: left; text-decoration: none; font-size: 1.2em;}
+	.navbar .current a {background: none;color: #666;}
+	.navbar ul:hover {background-image: none;}
+	.navbar li:hover {background: url(images/icon-check.png) no-repeat 10px 7px;}
+	.navbar.center ul {left: 50%;margin-left: -90px;}
+	.navbar ul:hover li {display: block;margin: 0 0 5px;}
+	.navbar.right ul {left: auto;right: 0;}
 }
 /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
 @media only screen and (min-width: 480px) and (max-width: 767px) {
-	#tabletmenu {	display: inline-block;*display: inline; width: 80%;}
-	#topmenu form {margin-bottom: 0;}
-	#tabletmenu select {font-size: 1.2em; padding:5px;margin-bottom: 0;}
 
 }
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width: 479px) {
-	body {font: 12px/18px "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;;}
+	body {font: 12px/18px "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;}
 	a#top-link {background: url(images/up_small.png) no-repeat 0 0; height:24px; width:24px;}
-	#tabletmenu {	display: inline-block;*display: inline; width: 80%;}
-	#topmenu form {margin-bottom: 0;}
-	#tabletmenu select {font-size: 1.2em; padding:5px;margin-bottom: 0;}
+	#top_text {margin-top: 0;}
 }
 /* Print Styles */
 @media print {
